--- a/templates/eks/amazon-eks-nodepool-cf.yaml
+++ b/templates/eks/amazon-eks-nodepool-cf.yaml
@@ -1,20 +1,19 @@
 ---
 AWSTemplateFormatVersion: "2010-09-09"
+
 Description: Amazon EKS - Node Group
 
 Metadata:
   "AWS::CloudFormation::Interface":
     ParameterGroups:
-      -
-        Label:
+      - Label:
           default: EKS Cluster
         Parameters:
           - ClusterName
           - ClusterControlPlaneSecurityGroup
           - CustomNodeSecurityGroups
           - NodeSecurityGroup
-      -
-        Label:
+      - Label:
           default: Worker Node Configuration
         Parameters:
           - NodeGroupName
@@ -28,15 +27,13 @@ Metadata:
           - NodeImageId
           - KeyName
           - BootstrapArguments
-      -
-        Label:
+      - Label:
           default: Worker Network Configuration
         Parameters:
           - VpcId
           - Subnets
 
 Parameters:
-
   BootstrapArguments:
     Description: "Arguments to pass to the bootstrap script. See files/bootstrap.sh in https://github.com/awslabs/amazon-eks-ami"
     Default: ""
@@ -73,7 +70,6 @@ Parameters:
       Type: Number
       Description: Maximum size of Node Group ASG.
       Default: 3
-
   NodeGroupName:
       Description: Unique identifier for the Node Group.
       Type: String
@@ -468,8 +464,7 @@ Resources:
               InstanceMarketOptions:
                 !If
                   - IsSpotInstance
-                  -
-                    MarketType: spot
+                  - MarketType: spot
                     SpotOptions:
                       MaxPrice: !Ref NodeSpotPrice
                       SpotInstanceType: one-time
@@ -500,8 +495,7 @@ Resources:
               Version: !GetAtt NodeLaunchTemplate.LatestVersionNumber
           MinSize: !Ref NodeAutoScalingGroupMinSize
           MaxSize: !Ref NodeAutoScalingGroupMaxSize
-          VPCZoneIdentifier:
-              !Ref Subnets
+          VPCZoneIdentifier: !Ref Subnets
           Tags:
               - Key: Name
                 Value: !Sub ${ClusterName}-${NodeGroupName}-Node
