chore(tmpl/EKS/np): synced unused NASGDesiredCap.
Added unused NodeAutoScalingGroupDesiredCapacity
according to source. It cannot replace InitSize,
because we are postponing migration implementation
and backward compatibility issues.

--- a/templates/eks/amazon-eks-nodepool-cf.yaml
+++ b/templates/eks/amazon-eks-nodepool-cf.yaml
@@ -18,8 +18,9 @@ Metadata:
         Parameters:
           - NodeGroupName
           - NodeAutoScalingGroupMinSize
-          - NodeAutoScalingInitSize
+          # - NodeAutoScalingGroupDesiredCapacity
           - NodeAutoScalingGroupMaxSize
+          - NodeAutoScalingInitSize # Note: in place of NodeAutoScalingGroupDesiredCapacity for backward compatibility.
           - NodeInstanceType
           # - NodeImageIdSSMParam
           - NodeImageId
@@ -60,10 +61,10 @@ Parameters:
     Type: String
     Description: The EC2 Key Pair to allow SSH access to the instances
 
-  NodeAutoScalingInitSize:
-    Type: Number
-    Default: 1
-    Description: The initial size of Node Group ASG.
+  # NodeAutoScalingGroupDesiredCapacity:
+  #   Type: Number
+  #   Default: 1
+  #   Description: Desired capacity of Node Group ASG.
 
   NodeAutoScalingGroupMaxBatchSize:
     Type: Number
@@ -79,6 +80,11 @@ Parameters:
     Type: Number
     Default: 1
     Description: Minimum size of Node Group ASG.
+
+  NodeAutoScalingInitSize:
+    Type: Number
+    Default: 1
+    Description: (In place of NodeAutoScalingGroupDesiredCapacity) The initial size of Node Group ASG.
 
   NodeGroupName:
     Type: String
